[package]
name = "songdl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
anyhow = "1.0.71"
crossbeam-channel = "0.5.8"
eframe = "0.22.0"
egui = "0.22.0"
egui-phosphor = "0.1.1"
egui_extras = "0.22.0"
image = "0.24.6"
ipipe = "0.11.7"
mp4 = "0.13.0"
poll-promise = "0.2.0"
rfd = "0.11.4"
serde_json = "1.0.96"
tempfile = "3.5.0"
egui-notify = { git = "https://github.com/n00kii/songdl" }
serde = "1.0.163"
figment = { version = "0.10.9", features = [ "toml" ] }
toml = "0.7.4"
