[package]
name = "songdl"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
anyhow = "1.0.71"
crossbeam-channel = "0.5.8"
eframe = "0.22.0"
egui = "0.22.0"
egui-phosphor = "0.1.1"
egui_extras = "0.22.0"
image = "0.24.6"
ipipe = "0.11.7"
mp4 = "0.13.0"
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise" }
parking_lot = "0.12.1"
once_cell = "1.18.0"
rfd = "0.11.4"
serde_json = "1.0.96"
tempfile = "3.5.0"
egui-notify = { git = "https://github.com/n00kii/egui-notify" }
serde = "1.0.163"
figment = { version = "0.10.9", features = [ "toml" ] }
toml = "0.7.4"
regex = "1.8.4"
kira = "0.8.4"
